--- a/src/examples/shp_2004/CMakeLists.txt
+++ b/src/examples/shp_2004/CMakeLists.txt
@@ -31,11 +31,11 @@
 #
 ############################################################################
 px4_add_module(
-    MODULE examples__px4_simple_app
-    MAIN px4_simple_app
+    MODULE examples__shp_2004
+    MAIN shp_2004
     STACK_MAIN 2000
     SRCS
-        px4_simple_app.c
+        shp_2004.c
     DEPENDS
         platforms__common
-    )
+        )
