--- a/src/examples/shp_driver/CMakeLists.txt
+++ b/src/examples/shp_driver/CMakeLists.txt
@@ -31,11 +31,12 @@
 #
 ############################################################################
 px4_add_module(
-    MODULE examples__px4_simple_app
-    MAIN px4_simple_app
+    MODULE examples__shp_driver
+    MAIN shp_driver
     STACK_MAIN 2000
     SRCS
-        px4_simple_app.c
+        shp_driver.cpp
     DEPENDS
         platforms__common
-    )
+   	)
+
