--- a/src/examples/shp_xkf/CMakeLists.txt
+++ b/src/examples/shp_xkf/CMakeLists.txt
@@ -31,11 +31,11 @@
 #
 ############################################################################
 px4_add_module(
-    MODULE examples__px4_simple_app
-    MAIN px4_simple_app
+    MODULE examples__shp_xkf
+    MAIN shp_xkf
     STACK_MAIN 2000
     SRCS
-        px4_simple_app.c
+        shp_xkf.cpp
     DEPENDS
         platforms__common
-    )
+        )
