--- a/src/modules/shp_module/CMakeLists.txt
+++ b/src/modules/shp_module/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2015 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2018 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -30,12 +30,14 @@
 # POSSIBILITY OF SUCH DAMAGE.
 #
 ############################################################################
+
 px4_add_module(
-    MODULE examples__xkf
-    MAIN xkf
-    STACK_MAIN 2000
-    SRCS
-        xkf.cpp
-    DEPENDS
-        platforms__common
-    )
+	MODULE modules__shp_module
+	MAIN shp_module
+	STACK_MAIN 1024
+	SRCS
+		shp_module.cpp
+	DEPENDS
+		platforms__common
+		modules__uORB
+)
